Создание всплывающего окна с формой обратной связи

--- a/#source/scss/variables.scss
+++ b/#source/scss/variables.scss
@@ -5,6 +5,7 @@ $base-color-light: white;
 $base-color-dark: black;
 $main-color: rgb(255, 191, 0);
 $secondary-color: rgb(17, 197, 17);
+$form-color:rgb(242, 242, 242);
 
 $main-bg: rgb(212, 159, 0);
 $secondary-bg:rgb(17, 197, 17);
