--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -901,3 +901,201 @@ body{
         }
     }
 }
+
+// Всплывающее окно с формой обратной связи
+
+.popup{
+    position: fixed;
+    top:0;
+    left: 100%;
+    width: 500px;
+    height: 100vh;
+    padding: 20px;
+    background-color: rgb(110, 110, 110);
+    z-index: 3;
+    display: flex;
+    flex-direction: column;
+    transition: left .3s ease;
+    &.popup_act{
+        left: calc(100% - 500px);
+    }
+    .popup__head{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .popup__title-head{
+            font-weight: 500;
+            font-size: 23px;
+            color: $base-color-light;
+        }
+        .popup__btn-close{
+            width: 40px;
+            height: 40px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: background-color .3s ease;
+            &:hover{
+                background-color: rgb(117, 117, 117);
+            }
+            &::before{
+                content: '\f00d';
+                font-weight: 900;
+                font-family: $awesome-font;
+                font-size: 30px;
+                color: $base-color-light;
+            }
+        }
+    }
+    .popup__body{
+        overflow: hidden;
+        transition: height .5s ease;
+        &.popup__body-prev{
+            height: 100%;
+            &.popup__body-prev_act{
+                height: 0;
+            }
+        }
+        &.popup__body-next{
+            height: 0;
+            &.popup__body-next_act{
+                height: 100%;
+            }
+        }
+        .popup__radio-choice{
+            .popup__subtitle{
+                color: $form-color;
+                font-size: 20px;
+                font-weight: 400;
+                margin: 10px 0;
+            }
+            .popup__radio-content{
+                display: flex;
+                flex-direction: column;
+                gap:10px;
+                .popup__radio-wrapper{
+                    display: flex;
+                    gap: 10px;
+                    align-items: center;
+                    .popup__radio-div{
+                        width: 20px;
+                        height: 20px;
+                        border-radius: 50%;
+                        border: 2px solid $main-bg;
+                        position: relative;
+                        overflow: hidden;
+                        cursor: pointer;
+                        &::before{
+                            content: '';
+                            position: absolute;
+                            top:100%;
+                            left: 50%;
+                            transform: translate(-50%,0);
+                            width: 10px;
+                            height: 10px;
+                            background-color: $main-bg;
+                            border-radius: 50%;
+                            transition: all .3s ease;
+                        }
+                        &.popup__radio-div_act{
+                            &::before{
+                                content: '';
+                                position: absolute;
+                                top:50%;
+                                left: 50%;
+                                transform: translate(-50%,-50%);
+                                width: 10px;
+                                height: 10px;
+                                background-color: $main-bg;
+                                border-radius: 50%;
+                            }
+                        }
+                    }
+                    .popup__radio{
+                        width: 100%;
+                        height: 100%;
+                        visibility: hidden;
+                    }
+                    .popup__label{
+                        color: $form-color;
+                        font-size: 15px;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+        .popup__input-wrapper{
+            margin-top: 20px;
+            width: 100%;
+            height: 40px;
+            border: 2px solid gray;
+            border-radius: 10px;
+            position: relative;
+            .popup__input{
+                width: 100%;
+                height: 100%;
+                background-color: transparent;
+                outline: none;
+                border: none;
+                color: white;
+                &:focus + .popup__input-label, &:valid + .popup__input-label{
+                    top: 0;
+                    font-size: 12px;
+                    left: 15px;
+                }
+            }
+            .popup__input-label{
+                position: absolute;
+                top:50%;
+                left: 3px;
+                padding: 0 5px;
+                background-color: rgb(110, 110, 110);
+                transform: translate(0,-50%);
+                color: rgb(173, 173, 173);
+                font-size: 14px;
+                transition: all .3s ease;
+            }
+        }
+        .popup__textarrea-wrapper{
+            margin-top: 20px;
+            width: 100%;
+            min-height: 120px;
+            resize: vertical;
+            border: 2px solid gray;
+            border-radius: 10px;
+            position: relative;
+            .popup__textarrea{
+                width: 100%;
+                height: 100%;
+                background-color: transparent;
+                outline: none;
+                border: none;
+                color: white;
+                &:focus + .popup__textarrea-label, &:valid + .popup__textarrea-label{
+                    top: 0;
+                    font-size: 12px;
+                    left: 15px;
+                }
+            }
+            .popup__textarrea-label{
+                position: absolute;
+                top:15px;
+                left: 3px;
+                padding: 0 5px;
+                background-color: rgb(110, 110, 110);
+                transform: translate(0,-50%);
+                color: rgb(173, 173, 173);
+                font-size: 14px;
+                transition: all .3s ease;
+            }
+        }
+        .popup__btn_mt{
+            margin-top: 20px;
+        }
+    }
+    .popup__footer{
+        margin-top: auto;
+    }
+}
