--- a/css/style.css
+++ b/css/style.css
@@ -1202,3 +1202,231 @@ body {
   left: 0;
   width: 100%;
 }
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 500px;
+  height: 100vh;
+  padding: 20px;
+  background-color: rgb(110, 110, 110);
+  z-index: 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: left 0.3s ease;
+  transition: left 0.3s ease;
+}
+.popup.popup_act {
+  left: calc(100% - 500px);
+}
+.popup .popup__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.popup .popup__head .popup__title-head {
+  font-weight: 500;
+  font-size: 23px;
+  color: white;
+}
+.popup .popup__head .popup__btn-close {
+  width: 40px;
+  height: 40px;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  cursor: pointer;
+  -webkit-transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease;
+}
+.popup .popup__head .popup__btn-close:hover {
+  background-color: rgb(117, 117, 117);
+}
+.popup .popup__head .popup__btn-close::before {
+  content: "\f00d";
+  font-weight: 900;
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+  font-size: 30px;
+  color: white;
+}
+.popup .popup__body {
+  overflow: hidden;
+  -webkit-transition: height 0.5s ease;
+  transition: height 0.5s ease;
+}
+.popup .popup__body.popup__body-prev {
+  height: 100%;
+}
+.popup .popup__body.popup__body-prev.popup__body-prev_act {
+  height: 0;
+}
+.popup .popup__body.popup__body-next {
+  height: 0;
+}
+.popup .popup__body.popup__body-next.popup__body-next_act {
+  height: 100%;
+}
+.popup .popup__body .popup__radio-choice .popup__subtitle {
+  color: rgb(242, 242, 242);
+  font-size: 20px;
+  font-weight: 400;
+  margin: 10px 0;
+}
+.popup .popup__body .popup__radio-choice .popup__radio-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+.popup .popup__body .popup__radio-choice .popup__radio-content .popup__radio-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.popup .popup__body .popup__radio-choice .popup__radio-content .popup__radio-wrapper .popup__radio-div {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid rgb(212, 159, 0);
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.popup .popup__body .popup__radio-choice .popup__radio-content .popup__radio-wrapper .popup__radio-div::before {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  width: 10px;
+  height: 10px;
+  background-color: rgb(212, 159, 0);
+  border-radius: 50%;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.popup .popup__body .popup__radio-choice .popup__radio-content .popup__radio-wrapper .popup__radio-div.popup__radio-div_act::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  background-color: rgb(212, 159, 0);
+  border-radius: 50%;
+}
+.popup .popup__body .popup__radio-choice .popup__radio-content .popup__radio-wrapper .popup__radio {
+  width: 100%;
+  height: 100%;
+  visibility: hidden;
+}
+.popup .popup__body .popup__radio-choice .popup__radio-content .popup__radio-wrapper .popup__label {
+  color: rgb(242, 242, 242);
+  font-size: 15px;
+  cursor: pointer;
+}
+.popup .popup__body .popup__input-wrapper {
+  margin-top: 20px;
+  width: 100%;
+  height: 40px;
+  border: 2px solid gray;
+  border-radius: 10px;
+  position: relative;
+}
+.popup .popup__body .popup__input-wrapper .popup__input {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  color: white;
+}
+.popup .popup__body .popup__input-wrapper .popup__input:focus + .popup__input-label, .popup .popup__body .popup__input-wrapper .popup__input:valid + .popup__input-label {
+  top: 0;
+  font-size: 12px;
+  left: 15px;
+}
+.popup .popup__body .popup__input-wrapper .popup__input-label {
+  position: absolute;
+  top: 50%;
+  left: 3px;
+  padding: 0 5px;
+  background-color: rgb(110, 110, 110);
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  color: rgb(173, 173, 173);
+  font-size: 14px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.popup .popup__body .popup__textarrea-wrapper {
+  margin-top: 20px;
+  width: 100%;
+  min-height: 120px;
+  resize: vertical;
+  border: 2px solid gray;
+  border-radius: 10px;
+  position: relative;
+}
+.popup .popup__body .popup__textarrea-wrapper .popup__textarrea {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  color: white;
+}
+.popup .popup__body .popup__textarrea-wrapper .popup__textarrea:focus + .popup__textarrea-label, .popup .popup__body .popup__textarrea-wrapper .popup__textarrea:valid + .popup__textarrea-label {
+  top: 0;
+  font-size: 12px;
+  left: 15px;
+}
+.popup .popup__body .popup__textarrea-wrapper .popup__textarrea-label {
+  position: absolute;
+  top: 15px;
+  left: 3px;
+  padding: 0 5px;
+  background-color: rgb(110, 110, 110);
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  color: rgb(173, 173, 173);
+  font-size: 14px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+.popup .popup__body .popup__btn_mt {
+  margin-top: 20px;
+}
+.popup .popup__footer {
+  margin-top: auto;
+}
