Изменение кнопки в секции с техникой и оборудованием

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -425,6 +425,9 @@ body{
                 margin-top: 5px;
                 margin-bottom: 30px;
             }
+            .btn-request{
+                margin-right: auto;
+            }
         }
     }
 }
