--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -14,6 +14,9 @@
 
 body{
     font-family: $main-font;
+    &.lock{
+        overflow-y: hidden;
+    }
 }
 
 // Стилизация навигации шапки сайта
@@ -907,13 +910,27 @@ body{
 
 // Всплывающее окно с формой обратной связи
 
+.overblock{
+    position: fixed;
+    top:0;
+    left: 0;
+    z-index: 3;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0);
+    visibility: hidden;
+    transition: background-color .3s ease;
+    &.overblock_act{
+        visibility: visible;
+        background-color: rgba(0, 0, 0, .7);
+    }
+}
 .popup{
     position: fixed;
     top:0;
     left: 100%;
     width: 500px;
     height: 100vh;
-    padding: 20px;
     background-color: rgb(110, 110, 110);
     z-index: 3;
     display: flex;
@@ -926,10 +943,12 @@ body{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        border-bottom: 2px solid $form-color-secondary;
+        padding: 20px;
         .popup__title-head{
             font-weight: 500;
             font-size: 23px;
-            color: $base-color-light;
+            color: $form-color;
         }
         .popup__btn-close{
             width: 40px;
@@ -948,13 +967,14 @@ body{
                 font-weight: 900;
                 font-family: $awesome-font;
                 font-size: 30px;
-                color: $base-color-light;
+                color: $form-color;
             }
         }
     }
     .popup__body{
         overflow: hidden;
         transition: height .5s ease;
+        padding: 0 20px 0 20px;
         &.popup__body-prev{
             height: 100%;
             &.popup__body-prev_act{
@@ -1033,7 +1053,7 @@ body{
             margin-top: 20px;
             width: 100%;
             height: 40px;
-            border: 2px solid gray;
+            border: 2px solid $form-color-secondary;
             border-radius: 10px;
             position: relative;
             .popup__input{
@@ -1042,7 +1062,7 @@ body{
                 background-color: transparent;
                 outline: none;
                 border: none;
-                color: white;
+                color: $form-color-third;
                 &:focus + .popup__input-label, &:valid + .popup__input-label{
                     top: 0;
                     font-size: 12px;
@@ -1056,7 +1076,7 @@ body{
                 padding: 0 5px;
                 background-color: rgb(110, 110, 110);
                 transform: translate(0,-50%);
-                color: rgb(173, 173, 173);
+                color: $form-color-third;
                 font-size: 14px;
                 transition: all .3s ease;
             }
@@ -1066,7 +1086,7 @@ body{
             width: 100%;
             min-height: 120px;
             resize: vertical;
-            border: 2px solid gray;
+            border: 2px solid $form-color-secondary;
             border-radius: 10px;
             position: relative;
             .popup__textarrea{
@@ -1075,7 +1095,7 @@ body{
                 background-color: transparent;
                 outline: none;
                 border: none;
-                color: white;
+                color: $form-color-third;
                 &:focus + .popup__textarrea-label, &:valid + .popup__textarrea-label{
                     top: 0;
                     font-size: 12px;
@@ -1089,7 +1109,7 @@ body{
                 padding: 0 5px;
                 background-color: rgb(110, 110, 110);
                 transform: translate(0,-50%);
-                color: rgb(173, 173, 173);
+                color: $form-color-third;
                 font-size: 14px;
                 transition: all .3s ease;
             }
@@ -1099,6 +1119,7 @@ body{
         }
     }
     .popup__footer{
+        padding: 0 20px 20px 20px;
         margin-top: auto;
     }
 }
