--- a/#source/scss/variables.scss
+++ b/#source/scss/variables.scss
@@ -5,7 +5,10 @@ $base-color-light: white;
 $base-color-dark: black;
 $main-color: rgb(255, 191, 0);
 $secondary-color: rgb(17, 197, 17);
+
 $form-color:rgb(242, 242, 242);
+$form-color-secondary: gray;
+$form-color-third: rgb(206, 206, 206);
 
 $main-bg: rgb(212, 159, 0);
 $secondary-bg:rgb(17, 197, 17);
