Изменение стилизации формы и настройка форм под все кнопки

--- a/#source/scss/variables.scss
+++ b/#source/scss/variables.scss
@@ -7,8 +7,9 @@ $main-color: rgb(255, 191, 0);
 $secondary-color: rgb(17, 197, 17);
 
 $form-color:rgb(242, 242, 242);
-$form-color-secondary: gray;
+$form-color-secondary: rgb(102, 105, 114);
 $form-color-third: rgb(206, 206, 206);
 
 $main-bg: rgb(212, 159, 0);
 $secondary-bg:rgb(17, 197, 17);
+$form-bg:rgb(71,74,81);
