--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1024,6 +1024,9 @@ body{
                         position: relative;
                         overflow: hidden;
                         cursor: pointer;
+                        &.danger{
+                            border: 2px solid red;
+                        }
                         &::before{
                             content: '';
                             position: absolute;
@@ -1070,6 +1073,12 @@ body{
             border: 2px solid $form-color-secondary;
             border-radius: 10px;
             position: relative;
+            &.danger{
+                border: 2px solid red;
+            }
+            &.success{
+                border: 2px solid $secondary-bg;
+            }
             .popup__input{
                 width: 100%;
                 height: 100%;
