--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,163 @@ body.lock {
 .nav .nav__contacts .nav__contact .nav__text-contact {
   color: white;
 }
+.nav .nav__burger {
+  cursor: pointer;
+  display: none;
+}
+.nav .nav__burger::before {
+  content: "\f0c9";
+  font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+  font-weight: 900;
+  font-size: 30px;
+  color: rgb(242, 242, 242);
+}
 
+.mobile-nav {
+  display: none;
+}
+
+@media screen and (max-width: 940px) {
+  .mobile-nav {
+    display: block;
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 483px;
+    height: 100%;
+    background-color: rgb(71, 74, 81);
+    z-index: 4;
+    -webkit-transition: right 0.5s ease;
+    transition: right 0.5s ease;
+  }
+  .mobile-nav.mobile-nav_act {
+    right: 0;
+  }
+  .mobile-nav .mobile-nav__head {
+    color: rgb(242, 242, 242);
+    padding: 20px;
+    border-bottom: 2px solid rgb(102, 105, 114);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .mobile-nav .mobile-nav__head .mobile-nav__title {
+    font-weight: 500;
+    font-size: 23px;
+  }
+  .mobile-nav .mobile-nav__head .mobile-nav__close::before {
+    cursor: pointer;
+    content: "\f00d";
+    font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+    font-weight: 900;
+    font-size: 30px;
+    color: rgb(242, 242, 242);
+  }
+  .mobile-nav .mobile-nav__body {
+    padding: 20px;
+  }
+  .mobile-nav .mobile-nav__body .mobile-nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 20px;
+  }
+  .mobile-nav .mobile-nav__body .mobile-nav__list .mobile-nav__link {
+    color: rgb(242, 242, 242);
+    font-size: 19px;
+    cursor: pointer;
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 20px;
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts.nav__contacts_mt {
+    margin-top: 20px;
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact {
+    min-width: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border: 2px solid rgb(187, 187, 187);
+    border-radius: 10px;
+    padding-right: 7px;
+    gap: 0px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact.nav__contact-1 {
+    background-color: rgb(212, 159, 0);
+    border: 2px solid rgb(212, 159, 0);
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact.nav__contact-1:hover {
+    background-color: transparent;
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact.nav__contact-2:hover {
+    background-color: rgb(187, 187, 187);
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact .nav__icon-contact {
+    width: 35px;
+    height: 35px;
+    border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact .nav__icon-contact::before {
+    content: "\f0e0";
+    font-size: 20px;
+    color: white;
+    font-weight: 900;
+    font-family: "Font Awesome 5 Free", "Font Awesome 5 Brands";
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact .nav__icon-contact.nav__icon-contact-1::before {
+    content: "\f095";
+  }
+  .mobile-nav .mobile-nav__body .nav__contacts .nav__contact .nav__text-contact {
+    color: white;
+  }
+  .nav {
+    -ms-grid-columns: 11fr 1fr;
+    grid-template-columns: 11fr 1fr;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .nav .nav__burger {
+    display: block;
+  }
+  .nav .nav__navigation {
+    display: none;
+  }
+  .nav .nav__contacts {
+    display: none;
+  }
+}
 .brand {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1237,7 +1393,7 @@ body.lock {
   width: 500px;
   height: 100vh;
   background-color: rgb(71, 74, 81);
-  z-index: 3;
+  z-index: 5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
