Настройка ссылок на сайте

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -10,6 +10,12 @@
 
 @import '../scss/variables.scss';
 
+// Стилизация html
+
+html{
+    scroll-behavior: smooth;
+}
+
 // Стилизация body
 
 body{
